# ds3502

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bacon.toml
.github/workflows/: rust.yml
examples/pico-example/: Cargo.toml  README.md
examples/pico-example/.cargo/: config.toml
examples/pico-example/assets/: pico-ds3502.fzz
examples/pico-example/src/: main.rs
src/: lib.rs
