[package]
name = "pico-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
ds3502 = { version = "0.1.0", path = "../.." }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
